assets/css/style.css
:root {
  --primary: #ccdad1;
  --secondary: #9caea9;
  --tertiary: #788585;
  --light-dark: blue;
  --dark: #38302e;
  --border-radius: 0.3rem;
}
#header {
  height: 50px;
  background-color: navy;
  text-align: center;
  color: white;
}
body {
  background-color: wheat;
}
.btn {
  font-size: 18px;
  text-decoration: none;
  padding: 6px 25px 10px 20px;
  width: 90%;
  height: 50px;
  display: block;
  margin: 25px 10px 20px 20px;
  border-radius: 10px;
  color: black;
  box-shadow: 3px 3px var(--dark);
  transform: translate(-1px, -1px);
}
#search {
  font-size: 18px;
  background-color: skyblue;
}
#bootstrap-overrides {
  background-color: silver;
  margin-top: 20px;
}
.card-header {
  font-size: 25px;
  text-align: center;
  padding: 10px 20px 0px 0px;
}
#city {
  width: 300px;
  height: 40px;
  margin: 0;
  border-radius: 5px;
  font-size: 20px;
}
.weather-conditions {
  margin-top: 20px;
}
#todays-weather {
  background-color: silver;
  width: 1090px;
  height: 290px;
  padding: 20px;
  margin-top: 20px;
  border-radius: 5px;
}
.weather-forecast {
  display: flex;
  flex-direction: column;
}
.five-day-forecast {
  background-color: darkslateblue;
  width: 180px;
  height: 170px;
  padding: 5px;
  margin-top: 10px;
}
.display-weather-conditions {
  width: 80%;
}
#show-five-day-header {
  margin-left: 45px;
  margin-top: 20px;
}
.text-color {
  color: white;
}
.each-day-date {
  color: white;
  font-size: 18px;
  font-weight: bold;
}
/* footer Styling */
.footer {
  padding: 30px;
  clear: both;
  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
    "Lucida Sans", Arial, sans-serif;
  text-align: center;
}

.footer h2 {
  font-size: 20px;
}
.city-name {
  width: 88%;
  border: 5px solid silver;
  background-color: silver;
  border-radius: 5px;
  font-size: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 20px 40px 40px 50px;
}
.hide {
  display: none;
}
.show {
  display: block;
}
.show-forecast {
  display: flex;
  flex-direction: row;
}

